# inventory-api

./: .env  Cargo.toml  diesel.toml  inventory.db  sqlite3.exp  sqlite3.lib
migrations/2024-11-25-032104_create_items/: up.sql
src/: main.rs  schema.rs
src/models/: item.rs  mod.rs  response_data.rs
src/repositories/: item_repository.rs  mod.rs
src/routes/: item_route.rs  mod.rs
src/services/: item_service.rs
src/utils/: db.rs  errors.rs
